<resources>
    <string name="app_name">Sportalk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>
    <string name="sportalk">Sportalk</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="already_register">Already registered?</string>
    <string name="auth_failed">Auth Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchToolbar">Search...</string>
    <string name="post">POST</string>
</resources>
